# AmberHawksProject

./: .gitignore  README.md  docker-compose.yml  docker-compose_v0.1.yml  package.json  pyproject.toml
backend/AH_project/: .dockerignore  Dockerfile  db.sqlite3  db.sqlite3.bak  manage.py  parcer.py  pyproject.toml  requirements.txt
backend/AH_project/AH_project/: asgi.py  settings.py  urls.py  wsgi.py
backend/AH_project/api/: serializers.py  views.py
backend/AH_project/contact_form/: .env.example  admin.py  models.py  serializers.py  views.py
backend/AH_project/contact_form/migrations/: 0001_initial.py  0002_alter_contact_team.py  0002_contact_processed.py
backend/AH_project/documents/: admin.py  models.py  serializers.py  views.py
backend/AH_project/documents/migrations/: 0001_initial.py
backend/AH_project/news/: admin.py  models.py  serializers.py  validators.py  views.py  vk_parser.py
backend/AH_project/news/migrations/: 0001_initial.py  0002_alter_games_score.py  0002_remove_games_depth_chart.py  0003_auto_20231225_1310.py  0003_games_depth_chart.py  0004_alter_games_depth_chart.py  0005_news_unique_news.py
backend/AH_project/players/: admin.py  models.py  serializers.py  views.py
backend/AH_project/teams/: admin.py  models.py  serializers.py  views.py
backend/AH_project/timetable/: admin.py  models.py  serializers.py  views.py
frontend/AH_project/: .dockerignore  .eslintrc.json  Dockerfile  LICENSE  next.config.js  package-lock.json  package.json
gateway/: nginx.conf
src/app/: page.jsx  page.module.css
src/mock/team/: util.js
(+101 files in other folders)
